Actualizo help.html desde desarrollo

--- a/help.html
+++ b/help.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Esta es la seccion de ayuda</h1>
-    
+    <h2>Ahora generaremos otro cambio desde la rama 'desarrollo'</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam in voluptas earum mollitia architecto, maxime voluptate? Vero, ad. Nihil aliquam accusantium aliquid ab ratione voluptate. Ducimus minus repellendus ipsa repudiandae.</p>
 </body>
 </html>
